# jni_trace

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jni_trace/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jni_trace/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle  make_plug.gradle
module/magisk_module/: module.prop
module/magisk_module/dex/: frida_helper.dex
module/src/main/cpp/: CMakeLists.txt  dump_so.cpp  example.cpp  load_dex.cpp
module/src/main/cpp/base/: hook.cpp  hook.h  when_so_load.cpp
module/src/main/cpp/jni_trace/: format.cpp  format.h  frida.cpp  hook.h  hook_array.cpp  hook_clz.cpp  jni_sym.cpp  jni_treace.cpp  jni_treace.h  log_maker.h
module/src/main/cpp/third/: CMakeLists.txt
module/src/main/cpp/third/dobby/: CMakeLists.txt
module/src/main/cpp/third/log2file/: app_file_writer.cpp  app_file_writer.h
module/src/main/cpp/third/utils/: linux_helper.cpp  stack.asm  utils.cpp  utils.h
